# zero2prod

./: .dockerignore  Cargo.toml  Dockerfile  configuration.yaml  spec.yaml
.sqlx/: query-fd9a429e56255215ac64ef9b9160c4f06e4f9a7fdcdbc0f81e01b433aef4699f.json
configuration/: base.yaml
migrations/: 20240310152341_create_subscriptions_table.sql
scripts/: init_db copy.sh
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
